Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4129

Successive calls to libcfs_debug_dumplog() can result in large number of log files and errors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.2.0
    • lustre/libcfs
    • 3
    • 11177

      Successive calls to libcfs_debug_dumplog() can occur with no delay between calls and can generate a very large number of log files and error messages like this over and over:

      [2009-08-01 00:45:59][c2-0c1s1n0]LustreError: dumping log to /tmp/lustre-log.1249105560.4266
      [2009-08-01 00:45:59][c2-0c1s1n0]LustreError: can't open /tmp/lustre-log.1249105560.4266 file: err -17
      [2009-08-01 00:45:59][c2-0c1s1n0]LustreError: dumping log to /tmp/lustre-log.1249105560.4266
      [2009-08-01 00:45:59][c2-0c1s1n0]LustreError: can't open /tmp/lustre-log.1249105560.4266 file: err -17

      This proposed patch will make debug log file name more unique.

            cliffw Cliff White (Inactive)
            n16490 Young Jong Pao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: