LU-4129 libcfs: libcfs_debug_dumplog() errors

This patch will make debug log file name more unique when successive
calls with no delay to libcfs_debug_dumplog() between calls to limit
number of log files and prevent error messages.

Signed-off-by: Young Jong Pao <n16490@cray.com>
Change-Id: Ibfc8d614817cf5130566806b45ff1a74d34ecc6f